src/objects/Release__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>What types of changes are being deployed?</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>EEO</fullName>
                </value>
                <value>
                    <fullName>GEO</fullName>
                </value>
                <value>
                    <fullName>PBS Client Solutions</fullName>
                </value>
                <value>
                    <fullName>PBS Property Disposal</fullName>
                </value>
                <value>
                    <fullName>PBS Workspaces</fullName>
                </value>
                <value>
                    <fullName>PEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Date_Time__c</fullName>
        <label>Release Date/ Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM&amp;E</fullName>
                </value>
                <value>
                    <fullName>O&amp;M Release</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All_Releases</fullName>
        <columns>NAME</columns>
        <columns>Release_Date_Time__c</columns>
        <columns>Release_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Releases</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Release Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>